<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.test2.TabActivity">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pageGroup"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="170dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" ></LinearLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/ly_top_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:background="@color/bg_topbar">-->

        <!--<TextView-->
            <!--android:id="@+id/text_topbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="@color/text_topbar"-->
            <!--android:text="信息"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2px"-->
            <!--android:background="@color/div_white"-->
            <!--android:layout_alignParentBottom="true"/>-->
    <!--</RelativeLayout>-->


<LinearLayout
android:id="@+id/ly_tab_bar"
android:layout_width="match_parent"
android:layout_height="56dp"
android:layout_alignParentBottom="true"
android:background="@color/bg_white"
android:orientation="horizontal">

<TextView
    android:id="@+id/txt_channel"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/tab_menu_bg"
    android:drawablePadding="3dp"
    android:drawableTop="@drawable/photo1"
    android:gravity="center"
    android:padding="5dp"
    android:text="@string/tab_menu_alert"
    android:textColor="@drawable/tab_menu_text"
    android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_menu_bg"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/photo2"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tab_menu_pay"
        android:textColor="@drawable/tab_menu_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_better"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_menu_bg"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/photo3"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tab_menu_setting"
        android:textColor="@drawable/tab_menu_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_menu_bg"
        android:drawablePadding="3dp"
        android:drawableTop="@drawable/photo4"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tab_menu_profile"
        android:textColor="@drawable/tab_menu_text"
        android:textSize="16sp" />

</LinearLayout>
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_above="@id/ly_tab_bar" />

    <!--<fragment android:name="com.example.lenovo.test2.ItemFragment"-->
        <!--android:id="@+id/list_fragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_above="@id/div_tab_bar"-->
        <!--android:layout_below="@id/ly_top_bar"/>-->

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="it's a image"-->
        <!--android:layout_below="@id/ly_content"/>-->
    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignBottom="@+id/div_tab_bar">
        </FrameLayout>

</RelativeLayout>